bug fix: correctly retrieve course by id